--- a/arch/arm/configs/ts471x_defconfig
+++ b/arch/arm/configs/ts471x_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.34
-# Thu Jul 24 16:47:58 2014
+# Thu Jul 24 17:06:43 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -2069,7 +2069,7 @@ CONFIG_MMC_BLOCK_PARANOID_RESUME=y
 #
 CONFIG_MMC_PXA_SDH=m
 # CONFIG_MMC3 is not set
-# CONFIG_TS47XX_OFFBOARD_MMC is not set
+CONFIG_TS47XX_OFFBOARD_MMC=y
 CONFIG_MMC_SDHCI=m
 CONFIG_MMC_SDHCI_IO_ACCESSORS=y
 # CONFIG_MMC_SDHCI_PCI is not set
