--- a/arch/arm/mach-mmp/Kconfig
+++ b/arch/arm/mach-mmp/Kconfig
@@ -19,11 +19,11 @@ endmenu
 menu "Marvell PXA168/910/MMP2 Implmentations"
 
 config MACH_TS47XX
-	bool "Technologic Systems' PXA168-based ts4700 Board"
+	bool "embeddedTS' PXA168-based ts4700 Board"
 	select CPU_PXA168
 	select ISA
 	help
-	  Say 'Y' here if you want to support Technologic Systems'
+	  Say 'Y' here if you want to support embeddedTS'
 	  PXA168-based ts4700 Board.
 
 
