--- a/drivers/mtd/nand/Kconfig
+++ b/drivers/mtd/nand/Kconfig
@@ -99,7 +99,7 @@ config MTD_NAND_TS7250
 	tristate "NAND Flash device on TS-7250 board"
 	depends on MACH_TS72XX
 	help
-	  Support for NAND flash on Technologic Systems TS-7250 platform.
+	  Support for NAND flash on embeddedTS TS-7250 platform.
 
 config MTD_NAND_IDS
 	tristate
